-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.2.0, Lustre 2.1.4
-
None
-
any lustre
-
3
-
4702
ost_brw_read set a number bytes as rq_status, that confuses check_set() function.
that easy see if checksumming enabled.
i found it's with testing solution to avoid panic in check_set() with request reorder and failed bulk read.
attached patch solves both issues, but broke a request flags policy, and don't resend a bulk request so that can be short time solution, until check_set will cleared.
- is duplicated by
-
LU-2260 2.1.3 Client LBUG
-
- Resolved
-
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....
1.
|
sanity.sh test_224b takes too long to run |
|
Resolved | WC Triage |